@@ -2,13 +2,20 @@
 Testen
 ----------------------------------------------------------------------
 
+fshash
+
 ----------------------------------------------------------------------
 Wichtig
 ----------------------------------------------------------------------
 
+Hat AVM bei neueren Firmwares das Telefonbuch/Webinterface auf UTF-8
+umgestellt?
+
 ----------------------------------------------------------------------
 Demnächst anschauen
 ----------------------------------------------------------------------
+
+Evtl. temporäre Callers auf fshash umstellen
 
 ----------------------------------------------------------------------
 Nicht so wichtig, Ideen
