@@ -36,7 +36,7 @@ CALLMONITOR_TRANSIENT=/var/cache/phonebook/callers
 
 CALLMONITOR_DUMPFILE=$CALLMONITOR_TMPDIR/callmonitor.dump
 
-CALLMONITOR_DOC_URL='http://wiki.ip-phone-forum.de/software:callmonitor:start'
+CALLMONITOR_DOC_URL='http://trac.freetz.org/wiki/packages/callmonitor'
 CALLMONITOR_FORUM_URL='http://www.ip-phone-forum.de/showthread.php?t=100706'
 
 ## computed values
